src/objects/Coupon_Used__c.object
<CustomObject>
    <description>IEC - track coupon used in purchases</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>IEC - Account (sold to) used the coupon during purchase</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Coupons Used</relationshipLabel>
        <relationshipName>Purchase_Coupons_Used</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <description>IEC - coupon</description>
        <label>Coupon</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Order Product</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Purchase Coupons Used</relationshipLabel>
        <relationshipName>Purchase_Coupons_Used</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related order</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Purchase Coupons Used</relationshipLabel>
        <relationshipName>Purchase_Coupons_Used</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - Related product for coupon</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Coupons Used</relationshipLabel>
        <relationshipName>Purchase_Coupons_Used</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID of the order + ID of the coupon</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Purchase Coupon Used</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Coupon__c</columns>
        <columns>Order__c</columns>
        <columns>Order_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Coupon Used</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Coupons Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>